fix single product additional information tab alignment of table items

--- a/src/sass/plugins/woocommerce/_single-product.scss
+++ b/src/sass/plugins/woocommerce/_single-product.scss
@@ -25,6 +25,15 @@ body.single-product {
 
 	div.woocommerce-variation-description {
 		margin-bottom: 1rem;
+	}
+
+	table.woocommerce-product-attributes {
+		text-align: left;
+
+		p {
+			margin-bottom: 1rem;
+
+		}
 
 	}
 
